Fixed contact seciont overlap on mobile view

--- a/src/components/styles/ContactCard.module.css
+++ b/src/components/styles/ContactCard.module.css
@@ -10,11 +10,12 @@
 
 .portfolio_item_img {
     display: block;
-    width: 35vh;
-    height: 35vh;
+    width: 50%;
+    height: 50%;
     margin: auto;
     border-radius: 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    object-fit: cover;
     
 }
 
